--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="osos pandas, pandas, bambú, osos, habitat"> 
     <meta name="description" content="Aprende más sore los pandas!!!">
     <meta name="author" content="Norma Ramirez">
-    <title>Osos pandas</title>
+    <title>Los osos pandas</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body style="background-color: rgb(199, 255, 143);" >
