--- a/habitat.html
+++ b/habitat.html
@@ -16,7 +16,7 @@
         <a href="impacto.html" style="margin-left: 70px;">Cambio climático</a>
         <a href="formulario.html" style="margin-left: 70px;">Comentarios</a>    
     </div>
-        <h1>Ahora aprenderemos sobre su habitat...</h1>
+        <h1>Ahora aprenderemos sobre su habitat</h1>
     </header>
     <main>
         <article>
