Tema escrito correctamente

--- a/impacto.html
+++ b/impacto.html
@@ -14,7 +14,7 @@
             <a href="comportamiento.html">Comportamiento y socialización</a>
             <a href="formulario.html" style="margin-left: 70px;">Comentarios</a>
         </div>
-        <h1>Impacto del cambio climático en los osos panda</h1>
+        <h1>Impacto del cambio climático en los osos pandas</h1>
     </header>
     <main>
         <article>
