--- a/formulario.html
+++ b/formulario.html
@@ -90,7 +90,7 @@
                 <br>
                 <br>
 
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar comentario">
                 
             </fieldset>
         </section>
